<resources>
    <string name="app_name">玩儿Android</string>
    <string name="tab_home">首页</string>
    <string name="tab_classify">分类</string>
    <string name="tab_user">我的</string>
    <string name="label_settings">设置</string>

    <string name="unknown_user_date">unknown</string>
    <string name="search_things_here">搜索你想要的内容…</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="action_login">登录</string>
    <string name="invalid_username">请输入合适的用户名</string>
    <string name="invalid_password">密码必须在6~20位之间</string>
    <string name="login_failed">登录失败了</string>
    <string name="title_me">我</string>
    <string name="my_articles">我的文章</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_todo">我的清单</string>
    <string name="not_login">未登录</string>
    <string name="user_has_no_name">佚名</string>
    <string name="login_to_see">登录后查看</string>
    <string name="settings_about">关于</string>
    <string name="action_logout">退出登录</string>
    <string name="logout_successful">退出登录成功！</string>
    <string name="logout_failed_retry">退出登录失败，请重试！</string>
    <string name="default_webview_title">WebView详情页</string>
    <string name="collect_success">收藏成功</string>
    <string name="un_collect_success">取消收藏成功</string>
    <string name="collect_failed">收藏失败</string>
    <string name="un_collect_failed">取消收藏失败</string>

    <string name="author_articles">%1$s的文章</string>
    <string name="title_classify_articles">文章分类</string>
</resources>
