<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_me"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:textColor="@color/colorTitleText" />

            <ImageButton
                android:id="@+id/btn_settings"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="16dp"
                android:background="?attr/actionBarItemBackground"
                android:src="@drawable/ic_settings"
                android:tint="@color/white" />
        </FrameLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="32dp"
                    app:civ_border_color="@color/colorPrimary"
                    app:civ_border_width="1dp"
                    tools:src="@mipmap/img_default_avatar" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/iv_avatar"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@+id/iv_avatar"
                    android:textSize="16sp"
                    tools:text="大大纸飞机" />

                <TextView
                    android:id="@+id/tv_coin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_name"
                    android:layout_alignStart="@+id/tv_name"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="12sp"
                    tools:text="积分：1000 排名：100+" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_articles"
                style="@style/OneLineTextStyle"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_article"
                android:text="@string/my_articles"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/tv_collect"
                style="@style/OneLineTextStyle"
                android:layout_marginTop="1dp"
                android:drawableStart="@drawable/ic_collect_normal"
                android:text="@string/my_collect"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/tv_todo"
                style="@style/OneLineTextStyle"
                android:layout_marginTop="1dp"
                android:drawableStart="@drawable/ic_todo"
                android:text="@string/my_todo"
                tools:ignore="UnusedAttribute" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>